# ssepy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yml  lint.yml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  cascade.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  ssepy.html
docs/_build/.doctrees/: cascade.doctree  environment.pickle  index.doctree  modules.doctree  ssepy.doctree
docs/_build/_sources/: cascade.rst.txt  modules.rst.txt  ssepy.rst.txt
docs/_build/doctrees/: cascade.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  cascade.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/html/_sources/: modules.rst.txt
examples/: oracle-estimation.ipynb  sampling-and-estimation.ipynb
ssepy/: __init__.py  model_performance_evaluator.py  oracle_estimator.py
tests/: test_model_evaluator.py
